v0.17 - INPROGRESS

    - Add additional pathological elements CurrentMirror and VoltageMirror, along with a twoport VMCMPair
    - Fixed CurrentLabel placement with transistor elements, now follows biasing current
    - Fixed CurrentLabel positioning for elements with no center anchor
    - Add DataBusLine element
    - Fixed default style hierarchy on segments
    - Added compound twoport elements:
        - ElementTwoport
        - TwoPort
        - VoltageTransactor
        - TransimpedanceTransactor
        - CurrentTransactor
        - TransadmittanceTransactor
        - Nullor
    - Added pathological elements Nullator and Norator
    - Added Transistor elements AnalogNFet, AnalogPFet, and AnalogBiasedFet

v0.16 - 25-Mar-2023

    - Added `canvas` parameter to Drawing and draw method, and deprecated `backend` parameter.
    - Removed `elements` argument from Drawing. Use Drawing.add_elements.
    - Added `Drawing.set_anchor` to define anchor points, useful for ElementDrawing instances.
    - Added shunt resistor symbol Rshunt
    - Fixed lead length of XOR gates to align with OR gates
    - Fixed greater and less than symbols in SVG backend
    - Fixed some anchor positions on flowchart symbols
    - Allow font parameter to be the path of a TTF file
    - Removed old deprecations
    - Replaced setup.py with setup.cfg


v0.15 - 20-Jun-2022

    - Added DSP elements Circulator, Isolator, VGA
    - Added ZLabel element for right-angle impedance arrow labels
    - Changed DSP anchor names from 'in' to 'input' to avoid conflict with 'in' keyword
    - Fixed styles with nested ElementDrawing elements
    - Fixed zorder of filled elements in Matplotlib backend
    - Added mathfont parameter to labels for specifying different font on math labels
    - Added padx and pady parameters to Encircle elements
    - Moved SVG backend configuration to svgconfig object and deprecated 'settextmode'.
    - Added 'visible' parameter to Segment objects 


v0.14 - 09-Jan-2022
